apps/proxmox/torrent/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: torrent
spec:
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: 8080
  type: ClusterIP
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: torrent
  labels:
    kubernetes.io/service-name: torrent
    endpointslice.kubernetes.io/managed-by: fluxcd
addressType: IPv4
endpoints:
  - addresses:
      - 192.168.1.59
    conditions:
      ready: true
ports:
  - name: http
    port: 8080
    protocol: TCP
