apps/proxmox/torrent/traefik-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: torrent-custom-domain
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.tls.certresolver: letsencrypt
spec:
  ingressClassName: traefik
  rules:
    - host: torrent.vitalyguzun.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: torrent
                port:
                  number: 8080
